# controller/namespace/namespace.go
@@ -10,7 +10,14 @@ import (
 )
 
 // 定义通用的返回值，并写好uuid
-
+//GetNamespaceList get namespace
+// @Summary acl项目
+// @Description 获取acl项目
+// @Tags ACL
+// @Accept json
+// @Produce json
+// @Success 200 {string} string "ok"
+// @Router /acl/namespace/list [get]
 func GetNamespaceList(c *gin.Context) {
 	var list []model.Namespaces
 	if err := dbs.DB.Where("is_deleted = 0").Find(&list).Error; err != nil {
@@ -19,6 +26,16 @@ func GetNamespaceList(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, gin.H{"RetCode": 0, "Msg": "success", "data": list})
 }
+
+// AddNamespace add
+// @Summary 添加ACL项目
+// @Description 添加ACL项目
+// @Tags ACL
+// @Accept json
+// @Produce json
+// @Param body body model.Namespaces true  "请求参数"
+// @Success 200 {string} string "ok"
+// @Router /acl/namespace/add [POST]
 func AddNamespace(c *gin.Context) {
 	var req model.Namespaces
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -31,6 +48,16 @@ func AddNamespace(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, gin.H{"RetCode": 0, "Msg": "success", "Data": req})
 }
+
+// UpdateNamespace Update
+// @Summary 更新ACL项目
+// @Description 更新ACL项目
+// @Tags ACL
+// @Accept json
+// @Produce json
+// @Param body body model.Namespaces true  "请求参数"
+// @Success 200 {string} string "ok"
+// @Router /acl/namespace/update [POST]
 func UpdateNamespace(c *gin.Context) {
 	var req model.Namespaces
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -43,6 +70,16 @@ func UpdateNamespace(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, gin.H{"RetCode": 0, "Msg": "success"})
 }
+
+// DelNamespace delete
+// @Summary 删除ACL项目
+// @Description 删除ACL项目
+// @Tags ACL
+// @Accept json
+// @Produce json
+// @Param body body model.Namespaces true  "请求参数"
+// @Success 200 {string} string "ok"
+// @Router /acl/namespace/delete [POST]
 func DelNamespace(c *gin.Context) {
 	var req model.Namespaces
 	if err := c.ShouldBindJSON(&req); err != nil {
